--- a/ranges-ts/common.iter.op.iter_move.html
+++ b/ranges-ts/common.iter.op.iter_move.html
@@ -4,5 +4,5 @@ friend rvalue_reference_t&lt;I&gt; iter_move(const common_iterator&amp; i)
     requires InputIterator&lt;I&gt;;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>!i.is_sentinel</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to: <span class='texttt'>return ranges::iter_move(i.iter);</span></p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> The expression in <span class='texttt'>noexcept</span> is equivalent to:
 </p><pre class='codeblock'>
-</pre><p >noexcept(ranges::iter_move(i.iter))
-</p></div></div></div></div></body></html>
+noexcept(ranges::iter_move(i.iter))
+</pre></div></div></div></div></body></html>
