--- a/ranges-ts/concepts.lib.object.html
+++ b/ranges-ts/concepts.lib.object.html
@@ -1,43 +1,7 @@
 <!DOCTYPE html><html lang='en'><head><title>[concepts.lib.object]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>7</a> Concepts library <a class='abbr_ref' href='./#concepts.lib'>[concepts.lib]</a></h1><div id='concepts.lib.object'><h2 ><a class='secnum' style='min-width:88pt'>7.5</a> Object concepts <a class='abbr_ref'>[concepts.lib.object]</a></h2><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This section describes concepts that specify the basis of the
 value-oriented programming style on which the library is based.
 
-</p></div><div id='destructible'><h3 ><a class='secnum' href='#destructible' style='min-width:103pt'>7.5.1</a> Concept <span class='texttt'>Destructible</span> <a class='abbr_ref' href='concepts.lib.object.destructible'>[concepts.lib.object.destructible]</a></h3><div class='para' id='destructible-1'><div class='marginalizedparent'><a class='marginalized' href='#destructible-1'>1</a></div><p >The <span class='texttt'>Destructible</span> concept specifies properties of all types, instances of
-which can be destroyed at the end of their lifetime, or reference types.</p><p ><span class='indexparent'><a class='index' id='Destructible'></a></span><code class='itemdecl'>
-template &lt;class T&gt;
-concept bool Destructible = is_nothrow_destructible&lt;T&gt;::value; <span class='comment'>// <i><span class='texttt'>see below</span></i>
-</span></code></p></div><div class='itemdescr'></div><div class='para' id='destructible-2'><div class='marginalizedparent'><a class='marginalized' href='#destructible-2'>2</a></div><div class='itemdescr'><p >There need not be any subsumption relationship between <span class='texttt'>Destructible&lt;T&gt;</span>
-and <span class='texttt'>is_nothrow_destructible&lt;T&gt;::value</span>.</p></div></div><div class='para' id='destructible-3'><div class='marginalizedparent'><a class='marginalized' href='#destructible-3'>3</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> Unlike the <span class='texttt'>Destructible</span> library concept in the C++
-Standard (  ISO/IEC 14882:2014 &sect;<a href='../n4140/utility.arg.requirements'>[utility.arg.requirements]</a>), this concept forbids destructors
-that are <span class='texttt'>noexcept(false)</span>, even if non-throwing. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
-</p></div></div></div><div id='constructible'><h3 ><a class='secnum' href='#constructible' style='min-width:103pt'>7.5.2</a> Concept <span class='texttt'>Constructible</span> <a class='abbr_ref' href='concepts.lib.object.constructible'>[concepts.lib.object.constructible]</a></h3><div class='para' id='constructible-1'><div class='marginalizedparent'><a class='marginalized' href='#constructible-1'>1</a></div><p >The <span class='texttt'>Constructible</span> concept constrains the initialization of a variable of
-a type with a given set of argument types.</p><p ><span class='indexparent'><a class='index' id='Constructible'></a></span><code class='itemdecl'>
-template &lt;class T, class... Args&gt;
-concept bool Constructible =
-  Destructible&lt;T&gt; &amp;&amp; is_constructible&lt;T, Args...&gt;::value; <span class='comment'>// <i><span class='texttt'>see below</span></i>
-</span></code></p></div><div class='itemdescr'></div><div class='para' id='constructible-2'><div class='marginalizedparent'><a class='marginalized' href='#constructible-2'>2</a></div><div class='itemdescr'><p >There need not be any subsumption relationship between <span class='texttt'>Constructible&lt;T, Args...&gt;</span>
-and <span class='texttt'>is_constructible&lt;T, Args...&gt;::value</span>.
-</p></div></div></div><div id='defaultconstructible'><h3 ><a class='secnum' href='#defaultconstructible' style='min-width:103pt'>7.5.3</a> Concept <span class='texttt'>DefaultConstructible</span> <a class='abbr_ref' href='concepts.lib.object.defaultconstructible'>[concepts.lib.object.defaultconstructible]</a></h3><p ><span class='indexparent'><a class='index' id='DefaultConstructible'></a></span><code class='itemdecl'>
-template &lt;class T&gt;
-concept bool DefaultConstructible = Constructible&lt;T&gt;;
-</code></p></div><div id='moveconstructible'><h3 ><a class='secnum' href='#moveconstructible' style='min-width:103pt'>7.5.4</a> Concept <span class='texttt'>MoveConstructible</span> <a class='abbr_ref' href='concepts.lib.object.moveconstructible'>[concepts.lib.object.moveconstructible]</a></h3><p ><span class='indexparent'><a class='index' id='MoveConstructible'></a></span><code class='itemdecl'>
-template &lt;class T&gt;
-concept bool MoveConstructible =
-  Constructible&lt;T, T&gt; &amp;&amp; ConvertibleTo&lt;T, T&gt;;
-</code></p><div class='itemdescr'></div><div class='para' id='moveconstructible-1'><div class='marginalizedparent'><a class='marginalized' href='#moveconstructible-1'>1</a></div><div class='itemdescr'><p >If <span class='texttt'>T</span> is an object type, then let <span class='texttt'>rv</span> be an rvalue of type <span class='texttt'>T</span>
-and <span class='texttt'>u2</span> a distinct object of type <span class='texttt'>T</span> equal to <span class='texttt'>rv</span>.
-<span class='texttt'>MoveConstructible&lt;T&gt;</span> is satisfied only if</p><ul class='itemize'><li id='moveconstructible-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#moveconstructible-1.1'>(1.1)</a></div><p >After the definition <span class='texttt'>T u = rv;</span>, <span class='texttt'>u</span> is equal to <span class='texttt'>u2</span>.</p></li><li id='moveconstructible-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#moveconstructible-1.2'>(1.2)</a></div><p ><span class='texttt'>T{rv}</span> is equal to <span class='texttt'>u2</span>.</p></li><li id='moveconstructible-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#moveconstructible-1.3'>(1.3)</a></div><p >If <span class='texttt'>T</span> is not <span class='texttt'>const</span>, <span class='texttt'>rv</span>'s resulting state is valid
-but unspecified (  ISO/IEC 14882:2014 &sect;<a href='../n4140/lib.types.movedfrom'>[lib.types.movedfrom]</a>); otherwise, it is unchanged.
-</p></li></ul></div></div></div><div id='copyconstructible'><h3 ><a class='secnum' href='#copyconstructible' style='min-width:103pt'>7.5.5</a> Concept <span class='texttt'>CopyConstructible</span> <a class='abbr_ref' href='concepts.lib.object.copyconstructible'>[concepts.lib.object.copyconstructible]</a></h3><p ><span class='indexparent'><a class='index' id='CopyConstructible'></a></span><code class='itemdecl'>
-template &lt;class T&gt;
-concept bool CopyConstructible =
-  MoveConstructible&lt;T&gt; &amp;&amp;
-  Constructible&lt;T, T&amp;&gt; &amp;&amp; ConvertibleTo&lt;T&amp;, T&gt; &amp;&amp;
-  Constructible&lt;T, const T&amp;&gt; &amp;&amp; ConvertibleTo&lt;const T&amp;, T&gt; &amp;&amp;
-  Constructible&lt;T, const T&gt; &amp;&amp; ConvertibleTo&lt;const T, T&gt;;
-</code></p><div class='itemdescr'></div><div class='para' id='copyconstructible-1'><div class='marginalizedparent'><a class='marginalized' href='#copyconstructible-1'>1</a></div><div class='itemdescr'><p >If <span class='texttt'>T</span> is an object type, then let <span class='texttt'>v</span> be an lvalue of type (possibly
-<span class='texttt'>const</span>) <span class='texttt'>T</span> or an rvalue of type <span class='texttt'>const T</span>.
-<span class='texttt'>CopyConstructible&lt;T&gt;</span> is satisfied only if</p><ul class='itemize'><li id='copyconstructible-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#copyconstructible-1.1'>(1.1)</a></div><p >After the definition <span class='texttt'>T u = v;</span>, <span class='texttt'>u</span> is equal to <span class='texttt'>v</span>.</p></li><li id='copyconstructible-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#copyconstructible-1.2'>(1.2)</a></div><p ><span class='texttt'>T{v}</span> is equal to <span class='texttt'>v</span>.
-</p></li></ul></div></div></div><div id='movable'><h3 ><a class='secnum' href='#movable' style='min-width:103pt'>7.5.6</a> Concept <span class='texttt'>Movable</span> <a class='abbr_ref' href='concepts.lib.object.movable'>[concepts.lib.object.movable]</a></h3><p ><span class='indexparent'><a class='index' id='Movable'></a></span><code class='itemdecl'>
+</p></div><div id='movable'><h3 ><a class='secnum' href='#movable' style='min-width:103pt'>7.5.1</a> Concept <span class='texttt'>Movable</span> <a class='abbr_ref' href='concepts.lib.object.movable'>[concepts.lib.object.movable]</a></h3><p ><span class='indexparent'><a class='index' id='Movable'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
 concept bool Movable =
   is_object&lt;T&gt;::value &amp;&amp;
@@ -46,13 +10,13 @@ concept bool Movable =
   Swappable&lt;T&gt;;
 </code></p><div class='itemdescr'></div><div class='para' id='movable-1'><div class='marginalizedparent'><a class='marginalized' href='#movable-1'>1</a></div><div class='itemdescr'><p >There need not be any subsumption relationship between <span class='texttt'>Movable&lt;T&gt;</span> and
 <span class='texttt'>is_object&lt;T&gt;::value</span>.
-</p></div></div></div><div id='copyable'><h3 ><a class='secnum' href='#copyable' style='min-width:103pt'>7.5.7</a> Concept <span class='texttt'>Copyable</span> <a class='abbr_ref' href='concepts.lib.object.copyable'>[concepts.lib.object.copyable]</a></h3><p ><span class='indexparent'><a class='index' id='Copyable'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='copyable'><h3 ><a class='secnum' href='#copyable' style='min-width:103pt'>7.5.2</a> Concept <span class='texttt'>Copyable</span> <a class='abbr_ref' href='concepts.lib.object.copyable'>[concepts.lib.object.copyable]</a></h3><p ><span class='indexparent'><a class='index' id='Copyable'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
 concept bool Copyable =
   CopyConstructible&lt;T&gt; &amp;&amp;
   Movable&lt;T&gt; &amp;&amp;
   Assignable&lt;T&amp;, const T&amp;&gt;;
-</code></p></div><div id='semiregular'><h3 ><a class='secnum' href='#semiregular' style='min-width:103pt'>7.5.8</a> Concept <span class='texttt'>Semiregular</span> <a class='abbr_ref' href='concepts.lib.object.semiregular'>[concepts.lib.object.semiregular]</a></h3><p ><span class='indexparent'><a class='index' id='Semiregular'></a></span><code class='itemdecl'>
+</code></p></div><div id='semiregular'><h3 ><a class='secnum' href='#semiregular' style='min-width:103pt'>7.5.3</a> Concept <span class='texttt'>Semiregular</span> <a class='abbr_ref' href='concepts.lib.object.semiregular'>[concepts.lib.object.semiregular]</a></h3><p ><span class='indexparent'><a class='index' id='Semiregular'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
 concept bool Semiregular =
   Copyable&lt;T&gt; &amp;&amp;
@@ -60,7 +24,7 @@ concept bool Semiregular =
 </code></p><div class='itemdescr'></div><div class='para' id='semiregular-1'><div class='marginalizedparent'><a class='marginalized' href='#semiregular-1'>1</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> The <span class='texttt'>Semiregular</span> concept is satisfied by types that
 behave similarly to built-in types like <span class='texttt'>int</span>, except that they may not be
 comparable with <span class='texttt'>==</span>.<i>&nbsp;—&nbsp;end note</i>&nbsp;]
-</p></div></div></div><div id='regular'><h3 ><a class='secnum' href='#regular' style='min-width:103pt'>7.5.9</a> Concept <span class='texttt'>Regular</span> <a class='abbr_ref' href='concepts.lib.object.regular'>[concepts.lib.object.regular]</a></h3><p ><span class='indexparent'><a class='index' id='Regular'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='regular'><h3 ><a class='secnum' href='#regular' style='min-width:103pt'>7.5.4</a> Concept <span class='texttt'>Regular</span> <a class='abbr_ref' href='concepts.lib.object.regular'>[concepts.lib.object.regular]</a></h3><p ><span class='indexparent'><a class='index' id='Regular'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
 concept bool Regular =
   Semiregular&lt;T&gt; &amp;&amp;
