--- a/ranges-ts/intro.defs.html
+++ b/ranges-ts/intro.defs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang='en'><head><title>[intro.defs]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='intro.defs'><h1 ><a class='secnum' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><p >For the purposes of this document, the terms and definitions given in
-ISO/IEC 14882:2014 and the following apply.</p><p >ISO and IEC maintain terminological databases for use in standardization at
+ISO/IEC 14882:2014, ISO/IEC TS 19217:2015, and the following apply.</p><p >ISO and IEC maintain terminological databases for use in standardization at
 the following addresses:
-</p><ul class='itemize'><li ><p >IEC Electropedia: available at http://www.electropedia.org/
-</p></li><li ><p >ISO Online browsing platform: available at http://www.iso.org/obp
+</p><ul class='itemize'><li ><p >ISO Online browsing platform: available at http://www.iso.org/obp
+</p></li><li ><p >IEC Electropedia: available at http://www.electropedia.org/
 </p></li></ul><p ><span class='indexparent'><a class='index' id='constant_subexpression'></a></span></p><div id='defns.const.subexpr'><h2 ><a class='secnum' href='#defns.const.subexpr' style='min-width:88pt'>3.1</a> constant subexpression <a class='abbr_ref' href='defns.const.subexpr'>[defns.const.subexpr]</a></h2><p >expression whose evaluation as subexpression of a conditional-expression
 <span class='texttt'>CE</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.cond'>[expr.cond]</a>) would not prevent <span class='texttt'>CE</span> from being a core
 constant expression (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.const'>[expr.const]</a>)</p><p ><span class='indexparent'><a class='index' id='expression-equivalent'></a></span></p></div><div id='defns.expr.equiv'><h2 ><a class='secnum' href='#defns.expr.equiv' style='min-width:88pt'>3.2</a> expression-equivalent <a class='abbr_ref' href='defns.expr.equiv'>[defns.expr.equiv]</a></h2><p >relationship that exists between two expressions <span class='texttt'>E1</span> and <span class='texttt'>E2</span> such that
