--- a/ranges-ts/intro.scope.html
+++ b/ranges-ts/intro.scope.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html><html lang='en'><head><title>[intro.scope]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='intro.scope'><h1 ><a class='secnum' style='min-width:73pt'>1</a> Scope <a class='abbr_ref' href='./#intro.scope'>[intro.scope]</a></h1><p ><div class='quote'>
-Naturally the villagers were intrigued and soon a fire was put to the town's greatest
-kettle as the soldiers dropped in three smooth stones.
-
-“Now this will be a fine soup”, said the second soldier;
-“but a pinch of salt and some parsley would make it wonderful!”
-<div class='flushright'>
-&mdash; <i>Author Unknown</i>
-</div>
-</div></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This Technical Specification describes extensions to the C++
+<!DOCTYPE html><html lang='en'><head><title>[intro.scope]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='intro.scope'><h1 ><a class='secnum' style='min-width:73pt'>1</a> Scope <a class='abbr_ref' href='./#intro.scope'>[intro.scope]</a></h1><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This document describes extensions to the C++
 Programming Language (<a href='intro.refs'>[intro.refs]</a>) that
 permit operations on ranges of data. These extensions include
 changes and additions to the existing library facilities as well
