--- a/ranges-ts/tab.html
+++ b/ranges-ts/tab.html
@@ -101,7 +101,7 @@ complete or (possibly <i>cv</i>) <span class='texttt'>void</span>. </td></tr></t
 <a href='commonalgoreq'>[commonalgoreq]</a>         </td><td class='left'> Common algorithm requirements  </td><td class='left'>                           </td></tr><tr class='rowsep'><td class='left'> 
 <a href='iterator.primitives'>[iterator.primitives]</a>   </td><td class='left'> Iterator primitives            </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/iterator&gt;</span> </td></tr><tr ><td class='left'>
 <a href='iterators.predef'>[iterators.predef]</a>      </td><td class='left'> Predefined iterators           </td><td class='left'>                           </td></tr><tr ><td class='left'>
-<a href='iterators.stream'>[iterators.stream]</a>      </td><td class='left'> Stream iterators               </td><td class='left'>                           </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:103pt'>9.3.1</a> In general <a class='abbr_ref' href='iterator.requirements.general#tab:iterators.relations'>[iterator.requirements.general]</a></h4><div class='numberedTable' id='iterators.relations'>Table <a href='#iterators.relations'>8</a> — Relations among iterator categories<br><table ><tr class='rowsep'><td class='left'>
+<a href='iterators.stream'>[iterators.stream]</a>      </td><td class='left'> Stream iterators               </td><td class='left'>                           </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:103pt'>9.3.1</a> General <a class='abbr_ref' href='iterator.requirements.general#tab:iterators.relations'>[iterator.requirements.general]</a></h4><div class='numberedTable' id='iterators.relations'>Table <a href='#iterators.relations'>8</a> — Relations among iterator categories<br><table ><tr class='rowsep'><td class='left'>
 
 
 
@@ -112,7 +112,7 @@ complete or (possibly <i>cv</i>) <span class='texttt'>void</span>. </td></tr></t
 
   <a href='range.access'>[range.access]</a>        </td><td class='left'> Range access      </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/range&gt;</span> </td></tr><tr ><td class='left'>
   <a href='range.primitives'>[range.primitives]</a>    </td><td class='left'> Range primitives  </td><td class='left'> </td></tr><tr class='rowsep'><td class='left'> 
-  <a href='ranges.requirements'>[ranges.requirements]</a> </td><td class='left'> Requirements      </td><td class='left'> </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:103pt'>10.6.1</a> In general <a class='abbr_ref' href='ranges.requirements.general#tab:ranges.relations'>[ranges.requirements.general]</a></h4><div class='numberedTable' id='ranges.relations'>Table <a href='#ranges.relations'>10</a> — Relations among range categories<br><table ><tr class='rowsep'><td class='left'>
+  <a href='ranges.requirements'>[ranges.requirements]</a> </td><td class='left'> Requirements      </td><td class='left'> </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:103pt'>10.6.1</a> General <a class='abbr_ref' href='ranges.requirements.general#tab:ranges.relations'>[ranges.requirements.general]</a></h4><div class='numberedTable' id='ranges.relations'>Table <a href='#ranges.relations'>10</a> — Relations among range categories<br><table ><tr class='rowsep'><td class='left'>
 
 
   
