--- a/ranges-ts/alg.binary.search.html
+++ b/ranges-ts/alg.binary.search.html
@@ -93,7 +93,7 @@ Also, for all elements
 of
 <span class='texttt'>[first, last)</span>,
 <span class='texttt'>invoke(comp, invoke(proj, e), value)</span>
-shall imply
+shall imply <br/>
 <span class='texttt'>!invoke(comp, value, invoke(proj, e))</span>.</p></div></div><div class='para' id='equal.range-2'><div class='marginalizedparent'><a class='marginalized' href='#equal.range-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 </p><pre class='codeblock'>
 </pre></div></div><div class='para' id='equal.range-3'><div class='marginalizedparent'><a class='marginalized' href='#equal.range-3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
