--- a/ranges-ts/alg.equal.html
+++ b/ranges-ts/alg.equal.html
@@ -22,15 +22,14 @@ if for every iterator
 <span class='texttt'>i</span>
 in the range <span class='texttt'>[first1,last1)</span>
 the following condition holds:
-<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) != false</span>.
+<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>.
 Otherwise, returns
 <span class='texttt'>false</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and
-<span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, at most
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, at most
 <span class='texttt'>min(last1 - first1, last2 - first2)</span>
 applications of the corresponding predicate and projections.
 </p></div></div></div></div></body></html>
