--- a/ranges-ts/alg.is_permutation.html
+++ b/ranges-ts/alg.is_permutation.html
@@ -18,11 +18,11 @@ range <span class='texttt'>[first2,first2 + (last1 - first1))</span>, beginning 
 <span class='texttt'>I2 begin</span>, such that
 <span class='texttt'>equal(first1, last1, begin, pred, proj1, proj2)</span> returns <span class='texttt'>true</span>
 ; otherwise, returns <span class='texttt'>false</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and <span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
 corresponding predicate and projections if
 <span class='texttt'>equal(first1, last1, first2, last2, pred, proj1, proj2)</span>
 would return <span class='texttt'>true</span>; otherwise, at
