--- a/ranges-ts/alg.nonmodifying.html
+++ b/ranges-ts/alg.nonmodifying.html
@@ -262,8 +262,8 @@ and
 is the first iterator
 in the range <span class='texttt'>[first1,last1)</span>
 for which the following corresponding conditions hold:</p><ul class='itemize'><li id='mismatch-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.1'>(1.1)</a></div><p ><span class='texttt'>j</span> is in the range <span class='texttt'>[first2, last2)</span>.
-</p></li><li id='mismatch-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.2'>(1.2)</a></div><p ><span class='texttt'>!(*i == *(first2 + (i - first1)))</span>
-</p></li><li id='mismatch-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.3'>(1.3)</a></div><p ><span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) == false</span>
+</p></li><li id='mismatch-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.2'>(1.2)</a></div><p ><span class='texttt'>*i != *(first2 + (i - first1))</span>
+</p></li><li id='mismatch-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.3'>(1.3)</a></div><p ><span class='texttt'>!invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>
 </p></li></ul><p >Returns the pair
 <span class='texttt'>first1 + min(last1 - first1, last2 - first2)</span>
 and
@@ -298,15 +298,14 @@ if for every iterator
 <span class='texttt'>i</span>
 in the range <span class='texttt'>[first1,last1)</span>
 the following condition holds:
-<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) != false</span>.
+<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>.
 Otherwise, returns
 <span class='texttt'>false</span>.</p></div></div><div class='para' id='alg.equal-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.equal-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and
-<span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, at most
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='alg.equal-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='alg.equal-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='alg.equal-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, at most
 <span class='texttt'>min(last1 - first1, last2 - first2)</span>
 applications of the corresponding predicate and projections.
 </p></div></div></div><div id='alg.is_permutation'><h3 ><a class='secnum' href='#alg.is_permutation' style='min-width:103pt'>11.3.12</a> Is permutation <a class='abbr_ref' href='alg.is_permutation'>[alg.is_permutation]</a></h3><p ><span class='indexparent'><a class='index' id='is_permutation'></a></span><code class='itemdecl'>
@@ -329,11 +328,11 @@ range <span class='texttt'>[first2,first2 + (last1 - first1))</span>, beginning 
 <span class='texttt'>I2 begin</span>, such that
 <span class='texttt'>equal(first1, last1, begin, pred, proj1, proj2)</span> returns <span class='texttt'>true</span>
 ; otherwise, returns <span class='texttt'>false</span>.</p></div></div><div class='para' id='alg.is_permutation-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.is_permutation-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and <span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='alg.is_permutation-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='alg.is_permutation-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='alg.is_permutation-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
 corresponding predicate and projections if
 <span class='texttt'>equal(first1, last1, first2, last2, pred, proj1, proj2)</span>
 would return <span class='texttt'>true</span>; otherwise, at
