--- a/ranges-ts/algorithms.general.html
+++ b/ranges-ts/algorithms.general.html
@@ -6,9 +6,10 @@ and sorting and related operations,
 as summarized in Table <a href='#tab:algorithms.summary'>[tab:algorithms.summary]</a>.</p><div class='numberedTable' id='tab:algorithms.summary'>Table <a href='#tab:algorithms.summary'>11</a> — Algorithms library summary<br><table ><tr class='rowsep'><td colspan='2' class='center'><b>Subclause</b></td><td class='left'>	<b>Header(s)</b>	</td></tr><tr class='capsep'><td class='left'> 
 
 
-<a href='alg.nonmodifying'>[alg.nonmodifying]</a> </td><td class='left'> Non-modifying sequence operations  </td><td class='left'>           </td></tr><tr ><td class='left'>
-<a href='alg.modifying.operations'>[alg.modifying.operations]</a> </td><td class='left'> Mutating sequence operations </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> </td></tr><tr ><td class='left'>
-<a href='alg.sorting'>[alg.sorting]</a> </td><td class='left'> Sorting and related operations      </td><td class='left'>           </td></tr></table></div><p ><b>Header <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> synopsis</b></p><p ><span class='indexparent'><a class='index' id='experimental/ranges/algorithm'></a></span>
+<a href='alg.nonmodifying'>[alg.nonmodifying]</a>         </td><td class='left'> Non-modifying sequence operations </td><td class='left'> </td></tr><tr ><td class='left'>
+<a href='alg.modifying.operations'>[alg.modifying.operations]</a> </td><td class='left'> Mutating sequence operations      </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> </td></tr><tr ><td class='left'>
+<a href='alg.sorting'>[alg.sorting]</a>              </td><td class='left'> Sorting and related operations    </td><td class='left'> </td></tr></table></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >To ease transition, implementations provide additional algorithm signatures that
+are deprecated in this document (Annex <a href='depr.algo.range-and-a-half'>[depr.algo.range-and-a-half]</a>).</p><p ><b>Header <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> synopsis</b></p><p ><span class='indexparent'><a class='index' id='experimental/ranges/algorithm'></a></span>
 </p><pre class='codeblock'>
 #include &lt;initializer_list&gt;
 
@@ -993,21 +994,21 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
     bool
       prev_permutation(Rng&amp;&amp; rng, Comp comp = Comp{}, Proj proj = Proj{});
 }}}}
-</pre></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >All of the algorithms are separated from the particular implementations of data structures and are
+</pre></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >All of the algorithms are separated from the particular implementations of data structures and are
 parameterized by iterator types.
 Because of this, they can work with program-defined data structures, as long
-as these data structures have iterator types satisfying the assumptions on the algorithms.</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >For purposes of determining the existence of data races, algorithms shall
+as these data structures have iterator types satisfying the assumptions on the algorithms.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >For purposes of determining the existence of data races, algorithms shall
 not modify objects referenced through an iterator argument unless the
-specification requires such modification.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >Both in-place and copying versions are provided for certain
+specification requires such modification.</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >Both in-place and copying versions are provided for certain
 algorithms.<a class='footnotenum' href='#footnote-4'>4</a>
 When such a version is provided for <i>algorithm</i> it is called
 <i>algorithm<span class='texttt'>_copy</span></i>. Algorithms that take predicates end with the
-suffix <span class='texttt'>_if</span> (which follows the suffix <span class='texttt'>_copy</span>).</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >[&nbsp;<i>Note:</i>
+suffix <span class='texttt'>_if</span> (which follows the suffix <span class='texttt'>_copy</span>).</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >[&nbsp;<i>Note:</i>
 Unless otherwise specified, algorithms that take function objects as arguments
 are permitted to copy those function objects freely. Programmers for whom object
 identity is important should consider using a wrapper class that points to a
 noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/refwrap'>[refwrap]</a>), or some equivalent solution.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >In the description of the algorithms operators
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >In the description of the algorithms operators
 <span class='texttt'>+</span>
 and
 <span class='texttt'>-</span>
@@ -1023,17 +1024,17 @@ return tmp;
 <span class='texttt'>b-a</span>
 is the same as of</p><pre class='codeblock'>
 return distance(a, b);
-</pre></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >In the description of algorithm return values, sentinel values are sometimes
+</pre></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><p >In the description of algorithm return values, sentinel values are sometimes
 returned where an iterator is expected. In these cases, the semantics are as
 if the sentinel is converted into an iterator as follows:</p><pre class='codeblock'>
 I tmp = first;
 while(tmp != last)
   ++tmp;
 return tmp;
-</pre></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><p >Overloads of algorithms that take <span class='texttt'>Range</span> arguments (<a href='ranges.range'>[ranges.range]</a>)
+</pre></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><p >Overloads of algorithms that take <span class='texttt'>Range</span> arguments (<a href='ranges.range'>[ranges.range]</a>)
 behave as if they are implemented by calling <span class='texttt'>begin</span> and <span class='texttt'>end</span> on
 the <span class='texttt'>Range</span> and dispatching to the overload that takes separate
-iterator and sentinel arguments.</p></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><p >The number and order of template parameters for algorithm declarations
+iterator and sentinel arguments.</p></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><p >The number and order of template parameters for algorithm declarations
 is unspecified, except where explicitly stated otherwise.</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
 usually based on complexity considerations. When the cost of doing the operation
 dominates the cost of copy, the copying version is not included. For example,
