--- a/ranges-ts/concepts.lib.compare.equalitycomparable.html
+++ b/ranges-ts/concepts.lib.compare.equalitycomparable.html
@@ -37,7 +37,8 @@ concept bool EqualityComparableWith =
       const remove_reference_t&lt;U&gt;&amp;&gt;&gt; &amp;&amp;
   WeaklyEqualityComparableWith&lt;T, U&gt;;
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p >Let <span class='texttt'>t</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;T&gt;</span>, <span class='texttt'>u</span> be a
-<span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>, and <span class='texttt'>C</span> be
-<span class='texttt'>common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;</span>.
-<span class='texttt'>EqualityComparableWith&lt;T, U&gt;</span> is satisfied only if:</p><ul class='itemize'><li id='4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.1'>(4.1)</a></div><p ><span class='texttt'>bool(t == u) == bool(C(t) == C(u))</span>.
+<span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>, and <span class='texttt'>C</span> be:
+</p><pre class='codeblock'>
+common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;
+</pre><p ><span class='texttt'>EqualityComparableWith&lt;T, U&gt;</span> is satisfied only if:</p><ul class='itemize'><li id='4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.1'>(4.1)</a></div><p ><span class='texttt'>bool(t == u) == bool(C(t) == C(u))</span>.
 </p></li></ul></div></div></div></div></body></html>
