--- a/ranges-ts/concepts.lib.compare.stricttotallyordered.html
+++ b/ranges-ts/concepts.lib.compare.stricttotallyordered.html
@@ -43,9 +43,10 @@ concept bool StrictTotallyOrderedWith =
   };
 </code></p><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p >Let <span class='texttt'>t</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;T&gt;</span>,
 <span class='texttt'>u</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>,
-and <span class='texttt'>C</span> be <span class='texttt'>common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;,
-const remove_reference_t&lt;U&gt;&amp;&gt;</span>.
-<span class='texttt'>StrictTotallyOrderedWith&lt;T, U&gt;</span> is satisfied only if</p><ul class='itemize'><li id='2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.1'>(2.1)</a></div><p ><span class='texttt'>bool(t &lt; u) == bool(C(t) &lt; C(u)).</span>
+and <span class='texttt'>C</span> be:
+</p><pre class='codeblock'>
+common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;
+</pre><p ><span class='texttt'>StrictTotallyOrderedWith&lt;T, U&gt;</span> is satisfied only if</p><ul class='itemize'><li id='2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.1'>(2.1)</a></div><p ><span class='texttt'>bool(t &lt; u) == bool(C(t) &lt; C(u)).</span>
 </p></li><li id='2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.2'>(2.2)</a></div><p ><span class='texttt'>bool(t &gt; u) == bool(C(t) &gt; C(u)).</span>
 </p></li><li id='2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.3'>(2.3)</a></div><p ><span class='texttt'>bool(t &lt;= u) == bool(C(t) &lt;= C(u)).</span>
 </p></li><li id='2.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.4'>(2.4)</a></div><p ><span class='texttt'>bool(t &gt;= u) == bool(C(t) &gt;= C(u)).</span>
