--- a/ranges-ts/partial.sort.copy.html
+++ b/ranges-ts/partial.sort.copy.html
@@ -25,6 +25,7 @@ The smaller of:
 <span class='texttt'>result_last</span> or
 <span class='texttt'>result_first + (last - first)</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Approximately
-<span class='texttt'>(last - first) * log(min(last - first, result_last - result_first))</span>
-comparisons, and exactly twice as many applications of the projection.
+</p><pre class='codeblock'>
+(last - first) * log(min(last - first, result_last - result_first))
+</pre><p >comparisons, and exactly twice as many applications of the projection.
 </p></div></div></div></div></body></html>
