--- a/ranges-ts/alg.sort.html
+++ b/ranges-ts/alg.sort.html
@@ -85,8 +85,9 @@ The smaller of:
 <span class='texttt'>result_last</span> or
 <span class='texttt'>result_first + (last - first)</span>.</p></div></div><div class='para' id='partial.sort.copy-3'><div class='marginalizedparent'><a class='marginalized' href='#partial.sort.copy-3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Approximately
-<span class='texttt'>(last - first) * log(min(last - first, result_last - result_first))</span>
-comparisons, and exactly twice as many applications of the projection.
+</p><pre class='codeblock'>
+(last - first) * log(min(last - first, result_last - result_first))
+</pre><p >comparisons, and exactly twice as many applications of the projection.
 </p></div></div></div><div id='is.sorted'><h4 ><a class='secnum' href='#is.sorted' style='min-width:118pt'>11.5.1.5</a> <span class='texttt'>is_sorted</span> <a class='abbr_ref' href='is.sorted'>[is.sorted]</a></h4><p ><span class='indexparent'><a class='index' id='is_sorted'></a></span><code class='itemdecl'>
 template &lt;ForwardIterator I, Sentinel&lt;I&gt; S, class Proj = identity,
     IndirectStrictWeakOrder&lt;projected&lt;I, Proj&gt;&gt; Comp = less&lt;&gt;&gt;
