--- a/ranges-ts/algorithms.html
+++ b/ranges-ts/algorithms.html
@@ -6,9 +6,10 @@ and sorting and related operations,
 as summarized in Table <a href='#tab:algorithms.summary'>[tab:algorithms.summary]</a>.</p><div class='numberedTable' id='tab:algorithms.summary'>Table <a href='#tab:algorithms.summary'>11</a> — Algorithms library summary<br><table ><tr class='rowsep'><td colspan='2' class='center'><b>Subclause</b></td><td class='left'>	<b>Header(s)</b>	</td></tr><tr class='capsep'><td class='left'> 
 
 
-<a href='alg.nonmodifying'>[alg.nonmodifying]</a> </td><td class='left'> Non-modifying sequence operations  </td><td class='left'>           </td></tr><tr ><td class='left'>
-<a href='alg.modifying.operations'>[alg.modifying.operations]</a> </td><td class='left'> Mutating sequence operations </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> </td></tr><tr ><td class='left'>
-<a href='alg.sorting'>[alg.sorting]</a> </td><td class='left'> Sorting and related operations      </td><td class='left'>           </td></tr></table></div><p ><b>Header <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> synopsis</b></p><p ><span class='indexparent'><a class='index' id='experimental/ranges/algorithm'></a></span>
+<a href='alg.nonmodifying'>[alg.nonmodifying]</a>         </td><td class='left'> Non-modifying sequence operations </td><td class='left'> </td></tr><tr ><td class='left'>
+<a href='alg.modifying.operations'>[alg.modifying.operations]</a> </td><td class='left'> Mutating sequence operations      </td><td class='left'> <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> </td></tr><tr ><td class='left'>
+<a href='alg.sorting'>[alg.sorting]</a>              </td><td class='left'> Sorting and related operations    </td><td class='left'> </td></tr></table></div></div><div class='para' id='general-3'><div class='marginalizedparent'><a class='marginalized' href='#general-3'>3</a></div><p >To ease transition, implementations provide additional algorithm signatures that
+are deprecated in this document (Annex <a href='depr.algo.range-and-a-half'>[depr.algo.range-and-a-half]</a>).</p><p ><b>Header <span class='texttt'>&lt;experimental/ranges/algorithm&gt;</span> synopsis</b></p><p ><span class='indexparent'><a class='index' id='experimental/ranges/algorithm'></a></span>
 </p><pre class='codeblock'>
 #include &lt;initializer_list&gt;
 
@@ -993,21 +994,21 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
     bool
       prev_permutation(Rng&amp;&amp; rng, Comp comp = Comp{}, Proj proj = Proj{});
 }}}}
-</pre></div><div class='para' id='general-3'><div class='marginalizedparent'><a class='marginalized' href='#general-3'>3</a></div><p >All of the algorithms are separated from the particular implementations of data structures and are
+</pre></div><div class='para' id='general-4'><div class='marginalizedparent'><a class='marginalized' href='#general-4'>4</a></div><p >All of the algorithms are separated from the particular implementations of data structures and are
 parameterized by iterator types.
 Because of this, they can work with program-defined data structures, as long
-as these data structures have iterator types satisfying the assumptions on the algorithms.</p></div><div class='para' id='general-4'><div class='marginalizedparent'><a class='marginalized' href='#general-4'>4</a></div><p >For purposes of determining the existence of data races, algorithms shall
+as these data structures have iterator types satisfying the assumptions on the algorithms.</p></div><div class='para' id='general-5'><div class='marginalizedparent'><a class='marginalized' href='#general-5'>5</a></div><p >For purposes of determining the existence of data races, algorithms shall
 not modify objects referenced through an iterator argument unless the
-specification requires such modification.</p></div><div class='para' id='general-5'><div class='marginalizedparent'><a class='marginalized' href='#general-5'>5</a></div><p >Both in-place and copying versions are provided for certain
+specification requires such modification.</p></div><div class='para' id='general-6'><div class='marginalizedparent'><a class='marginalized' href='#general-6'>6</a></div><p >Both in-place and copying versions are provided for certain
 algorithms.<a class='footnotenum' href='#footnote-4'>4</a>
 When such a version is provided for <i>algorithm</i> it is called
 <i>algorithm<span class='texttt'>_copy</span></i>. Algorithms that take predicates end with the
-suffix <span class='texttt'>_if</span> (which follows the suffix <span class='texttt'>_copy</span>).</p></div><div class='para' id='general-6'><div class='marginalizedparent'><a class='marginalized' href='#general-6'>6</a></div><p >[&nbsp;<i>Note:</i>
+suffix <span class='texttt'>_if</span> (which follows the suffix <span class='texttt'>_copy</span>).</p></div><div class='para' id='general-7'><div class='marginalizedparent'><a class='marginalized' href='#general-7'>7</a></div><p >[&nbsp;<i>Note:</i>
 Unless otherwise specified, algorithms that take function objects as arguments
 are permitted to copy those function objects freely. Programmers for whom object
 identity is important should consider using a wrapper class that points to a
 noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/refwrap'>[refwrap]</a>), or some equivalent solution.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='general-7'><div class='marginalizedparent'><a class='marginalized' href='#general-7'>7</a></div><p >In the description of the algorithms operators
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='general-8'><div class='marginalizedparent'><a class='marginalized' href='#general-8'>8</a></div><p >In the description of the algorithms operators
 <span class='texttt'>+</span>
 and
 <span class='texttt'>-</span>
@@ -1023,17 +1024,17 @@ return tmp;
 <span class='texttt'>b-a</span>
 is the same as of</p><pre class='codeblock'>
 return distance(a, b);
-</pre></div><div class='para' id='general-8'><div class='marginalizedparent'><a class='marginalized' href='#general-8'>8</a></div><p >In the description of algorithm return values, sentinel values are sometimes
+</pre></div><div class='para' id='general-9'><div class='marginalizedparent'><a class='marginalized' href='#general-9'>9</a></div><p >In the description of algorithm return values, sentinel values are sometimes
 returned where an iterator is expected. In these cases, the semantics are as
 if the sentinel is converted into an iterator as follows:</p><pre class='codeblock'>
 I tmp = first;
 while(tmp != last)
   ++tmp;
 return tmp;
-</pre></div><div class='para' id='general-9'><div class='marginalizedparent'><a class='marginalized' href='#general-9'>9</a></div><p >Overloads of algorithms that take <span class='texttt'>Range</span> arguments (<a href='ranges.range'>[ranges.range]</a>)
+</pre></div><div class='para' id='general-10'><div class='marginalizedparent'><a class='marginalized' href='#general-10'>10</a></div><p >Overloads of algorithms that take <span class='texttt'>Range</span> arguments (<a href='ranges.range'>[ranges.range]</a>)
 behave as if they are implemented by calling <span class='texttt'>begin</span> and <span class='texttt'>end</span> on
 the <span class='texttt'>Range</span> and dispatching to the overload that takes separate
-iterator and sentinel arguments.</p></div><div class='para' id='general-10'><div class='marginalizedparent'><a class='marginalized' href='#general-10'>10</a></div><p >The number and order of template parameters for algorithm declarations
+iterator and sentinel arguments.</p></div><div class='para' id='general-11'><div class='marginalizedparent'><a class='marginalized' href='#general-11'>11</a></div><p >The number and order of template parameters for algorithm declarations
 is unspecified, except where explicitly stated otherwise.</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
 usually based on complexity considerations. When the cost of doing the operation
 dominates the cost of copy, the copying version is not included. For example,
@@ -1327,8 +1328,8 @@ and
 is the first iterator
 in the range <span class='texttt'>[first1,last1)</span>
 for which the following corresponding conditions hold:</p><ul class='itemize'><li id='mismatch-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.1'>(1.1)</a></div><p ><span class='texttt'>j</span> is in the range <span class='texttt'>[first2, last2)</span>.
-</p></li><li id='mismatch-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.2'>(1.2)</a></div><p ><span class='texttt'>!(*i == *(first2 + (i - first1)))</span>
-</p></li><li id='mismatch-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.3'>(1.3)</a></div><p ><span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) == false</span>
+</p></li><li id='mismatch-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.2'>(1.2)</a></div><p ><span class='texttt'>*i != *(first2 + (i - first1))</span>
+</p></li><li id='mismatch-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#mismatch-1.3'>(1.3)</a></div><p ><span class='texttt'>!invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>
 </p></li></ul><p >Returns the pair
 <span class='texttt'>first1 + min(last1 - first1, last2 - first2)</span>
 and
@@ -1363,15 +1364,14 @@ if for every iterator
 <span class='texttt'>i</span>
 in the range <span class='texttt'>[first1,last1)</span>
 the following condition holds:
-<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) != false</span>.
+<span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>.
 Otherwise, returns
 <span class='texttt'>false</span>.</p></div></div><div class='para' id='alg.equal-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.equal-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and
-<span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, at most
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='alg.equal-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='alg.equal-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='alg.equal-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.equal-2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, at most
 <span class='texttt'>min(last1 - first1, last2 - first2)</span>
 applications of the corresponding predicate and projections.
 </p></div></div></div><div id='alg.is_permutation'><h3 ><a class='secnum' href='#alg.is_permutation' style='min-width:103pt'>11.3.12</a> Is permutation <a class='abbr_ref' href='alg.is_permutation'>[alg.is_permutation]</a></h3><p ><span class='indexparent'><a class='index' id='is_permutation'></a></span><code class='itemdecl'>
@@ -1394,11 +1394,11 @@ range <span class='texttt'>[first2,first2 + (last1 - first1))</span>, beginning 
 <span class='texttt'>I2 begin</span>, such that
 <span class='texttt'>equal(first1, last1, begin, pred, proj1, proj2)</span> returns <span class='texttt'>true</span>
 ; otherwise, returns <span class='texttt'>false</span>.</p></div></div><div class='para' id='alg.is_permutation-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.is_permutation-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-No applications of the corresponding predicate and projections if
-<span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
-<span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied,
-and <span class='texttt'>last1 - first1 != last2 - first2</span>.
-Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
+No applications of the corresponding predicate and projections if:
+</p><ul class='itemize'><li id='alg.is_permutation-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.1'>(2.1)</a></div><p ><span class='texttt'>SizedSentinel&lt;S1, I1&gt;</span> is satisfied, and
+</p></li><li id='alg.is_permutation-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.2'>(2.2)</a></div><p ><span class='texttt'>SizedSentinel&lt;S2, I2&gt;</span> is satisfied, and
+</p></li><li id='alg.is_permutation-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#alg.is_permutation-2.3'>(2.3)</a></div><p ><span class='texttt'>last1 - first1 != last2 - first2</span>.
+</p></li></ul><p >Otherwise, exactly <span class='texttt'>last1 - first1</span> applications of the
 corresponding predicate and projections if
 <span class='texttt'>equal(first1, last1, first2, last2, pred, proj1, proj2)</span>
 would return <span class='texttt'>true</span>; otherwise, at
@@ -2308,8 +2308,9 @@ The smaller of:
 <span class='texttt'>result_last</span> or
 <span class='texttt'>result_first + (last - first)</span>.</p></div></div><div class='para' id='partial.sort.copy-3'><div class='marginalizedparent'><a class='marginalized' href='#partial.sort.copy-3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Approximately
-<span class='texttt'>(last - first) * log(min(last - first, result_last - result_first))</span>
-comparisons, and exactly twice as many applications of the projection.
+</p><pre class='codeblock'>
+(last - first) * log(min(last - first, result_last - result_first))
+</pre><p >comparisons, and exactly twice as many applications of the projection.
 </p></div></div></div><div id='is.sorted'><h4 ><a class='secnum' href='#is.sorted' style='min-width:118pt'>11.5.1.5</a> <span class='texttt'>is_sorted</span> <a class='abbr_ref' href='is.sorted'>[is.sorted]</a></h4><p ><span class='indexparent'><a class='index' id='is_sorted'></a></span><code class='itemdecl'>
 template &lt;ForwardIterator I, Sentinel&lt;I&gt; S, class Proj = identity,
     IndirectStrictWeakOrder&lt;projected&lt;I, Proj&gt;&gt; Comp = less&lt;&gt;&gt;
@@ -2454,7 +2455,7 @@ Also, for all elements
 of
 <span class='texttt'>[first, last)</span>,
 <span class='texttt'>invoke(comp, invoke(proj, e), value)</span>
-shall imply
+shall imply <br/>
 <span class='texttt'>!invoke(comp, value, invoke(proj, e))</span>.</p></div></div><div class='para' id='equal.range-2'><div class='marginalizedparent'><a class='marginalized' href='#equal.range-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 </p><pre class='codeblock'>
 </pre></div></div><div class='para' id='equal.range-3'><div class='marginalizedparent'><a class='marginalized' href='#equal.range-3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
