--- a/ranges-ts/concepts.lib.compare.html
+++ b/ranges-ts/concepts.lib.compare.html
@@ -74,9 +74,10 @@ concept bool EqualityComparableWith =
       const remove_reference_t&lt;U&gt;&amp;&gt;&gt; &amp;&amp;
   WeaklyEqualityComparableWith&lt;T, U&gt;;
 </code></p><div class='itemdescr'></div><div class='para' id='equalitycomparable-4'><div class='marginalizedparent'><a class='marginalized' href='#equalitycomparable-4'>4</a></div><div class='itemdescr'><p >Let <span class='texttt'>t</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;T&gt;</span>, <span class='texttt'>u</span> be a
-<span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>, and <span class='texttt'>C</span> be
-<span class='texttt'>common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;</span>.
-<span class='texttt'>EqualityComparableWith&lt;T, U&gt;</span> is satisfied only if:</p><ul class='itemize'><li id='equalitycomparable-4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#equalitycomparable-4.1'>(4.1)</a></div><p ><span class='texttt'>bool(t == u) == bool(C(t) == C(u))</span>.
+<span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>, and <span class='texttt'>C</span> be:
+</p><pre class='codeblock'>
+common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;
+</pre><p ><span class='texttt'>EqualityComparableWith&lt;T, U&gt;</span> is satisfied only if:</p><ul class='itemize'><li id='equalitycomparable-4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#equalitycomparable-4.1'>(4.1)</a></div><p ><span class='texttt'>bool(t == u) == bool(C(t) == C(u))</span>.
 </p></li></ul></div></div></div><div id='stricttotallyordered'><h3 ><a class='secnum' href='#stricttotallyordered' style='min-width:103pt'>7.4.4</a> Concept <span class='texttt'>StrictTotallyOrdered</span> <a class='abbr_ref' href='concepts.lib.compare.stricttotallyordered'>[concepts.lib.compare.stricttotallyordered]</a></h3><p ><span class='indexparent'><a class='index' id='StrictTotallyOrdered'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
 concept bool StrictTotallyOrdered =
@@ -122,9 +123,10 @@ concept bool StrictTotallyOrderedWith =
   };
 </code></p><div class='itemdescr'></div><div class='para' id='stricttotallyordered-2'><div class='marginalizedparent'><a class='marginalized' href='#stricttotallyordered-2'>2</a></div><div class='itemdescr'><p >Let <span class='texttt'>t</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;T&gt;</span>,
 <span class='texttt'>u</span> be a <span class='texttt'>const</span> lvalue of type <span class='texttt'>remove_reference_t&lt;U&gt;</span>,
-and <span class='texttt'>C</span> be <span class='texttt'>common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;,
-const remove_reference_t&lt;U&gt;&amp;&gt;</span>.
-<span class='texttt'>StrictTotallyOrderedWith&lt;T, U&gt;</span> is satisfied only if</p><ul class='itemize'><li id='stricttotallyordered-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#stricttotallyordered-2.1'>(2.1)</a></div><p ><span class='texttt'>bool(t &lt; u) == bool(C(t) &lt; C(u)).</span>
+and <span class='texttt'>C</span> be:
+</p><pre class='codeblock'>
+common_reference_t&lt;const remove_reference_t&lt;T&gt;&amp;, const remove_reference_t&lt;U&gt;&amp;&gt;
+</pre><p ><span class='texttt'>StrictTotallyOrderedWith&lt;T, U&gt;</span> is satisfied only if</p><ul class='itemize'><li id='stricttotallyordered-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#stricttotallyordered-2.1'>(2.1)</a></div><p ><span class='texttt'>bool(t &lt; u) == bool(C(t) &lt; C(u)).</span>
 </p></li><li id='stricttotallyordered-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#stricttotallyordered-2.2'>(2.2)</a></div><p ><span class='texttt'>bool(t &gt; u) == bool(C(t) &gt; C(u)).</span>
 </p></li><li id='stricttotallyordered-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#stricttotallyordered-2.3'>(2.3)</a></div><p ><span class='texttt'>bool(t &lt;= u) == bool(C(t) &lt;= C(u)).</span>
 </p></li><li id='stricttotallyordered-2.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#stricttotallyordered-2.4'>(2.4)</a></div><p ><span class='texttt'>bool(t &gt;= u) == bool(C(t) &gt;= C(u)).</span>
