--- a/ranges-ts/depr.general.html
+++ b/ranges-ts/depr.general.html
@@ -2,7 +2,7 @@
 existing implementations.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >These are deprecated features, where
 <a class='hidden_link' href='#def:deprecated' id='def:deprecated'><i>deprecated</i></a>
 is defined as:
-Normative for the current edition of the Ranges TS,
+Normative for the current edition of this document,
 but having been identified as a candidate for removal from future revisions.
 An implementation may declare library names and entities described in this section with the
 <span class='texttt'>deprecated</span> attribute (  ISO/IEC 14882:2014 &sect;<a href='../n4140/dcl.attr.deprecated'>[dcl.attr.deprecated]</a>).</p></div></div></div></body></html>
