--- a/ranges-ts/diff.cpp.defaultconstruct.html
+++ b/ranges-ts/diff.cpp.defaultconstruct.html
@@ -6,6 +6,6 @@ has captured by reference) must take special steps to provide default-constructi
 by wrapping non-default-constructible types in something like <span class='texttt'>std::optional</span>, as specified
 in the C++17 Working Draft N4618 &sect;20.6). This can weaken class invariants.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The guarantee of default-constructibility simplifies the implementation of much iterator- and
 range-based code that would otherwise need to wrap iterators in <span class='texttt'>std::optional</span>. But the
-needs of backward-compatibliity, the extra complexity to iterator implementors, and the weakened
+needs of backward-compatibility, the extra complexity to iterator implementors, and the weakened
 invariants may prove to be too great a burden.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >We may in fact go even farther and remove the requirement of default-constructibility from the
 <span class='texttt'>Semiregular</span> concept. Time and experience will give us guidance here.</p></div></div></div></body></html>
