--- a/ranges-ts/mismatch.html
+++ b/ranges-ts/mismatch.html
@@ -25,8 +25,8 @@ and
 is the first iterator
 in the range <span class='texttt'>[first1,last1)</span>
 for which the following corresponding conditions hold:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>j</span> is in the range <span class='texttt'>[first2, last2)</span>.
-</p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='texttt'>!(*i == *(first2 + (i - first1)))</span>
-</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p ><span class='texttt'>invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1)))) == false</span>
+</p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p ><span class='texttt'>*i != *(first2 + (i - first1))</span>
+</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p ><span class='texttt'>!invoke(pred, invoke(proj1, *i), invoke(proj2, *(first2 + (i - first1))))</span>
 </p></li></ul><p >Returns the pair
 <span class='texttt'>first1 + min(last1 - first1, last2 - first2)</span>
 and
